# RustBlue

./: Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
data/: org.rustblue.Manager.desktop
src/: main.rs
src/bluetooth/: adapter.rs  device.rs  manager.rs  mod.rs
src/ui/: device_list.rs  mod.rs  window.rs
