[package]
name = "rustblue"
version = "0.1.0"
edition = "2021"
authors = ["Shawn <shawn@example.com>"]
description = "A modern Bluetooth manager for Linux written in Rust with GTK4"
license = "GPL-3.0"
repository = "https://github.com/xiaotinglian/rustblue"
keywords = ["bluetooth", "gtk4", "linux", "gui", "bluez"]
categories = ["gui", "hardware-support"]

[dependencies]
gtk = { version = "0.8", package = "gtk4" }
glib = "0.19"
gio = "0.19"
adw = { version = "0.6", package = "libadwaita" }
tokio = { version = "1.0", features = ["full"] }
dbus = "0.9"
bluer = { version = "0.17", features = ["bluetoothd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = "1.0"
futures = "0.3"
async-trait = "0.1"
dbus-tokio = "0.7"
dirs = "5.0"
